syntax = "proto3";

package orders.api.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/go-saga-proc/protos/orders/protogen/api/v1";

// API to serve all Events Manager endpoints.
service OrdersAPI {
  // Smallest request that needs no auth and returns 200.
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {}

  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}


message GetHealthRequest {}

message GetHealthResponse {}


message CreateOrderRequest {
  int64 amount = 1;
}

message CreateOrderResponse {
  int64 id = 1;
  int64 amount = 2;
}

